# advent-of-code

./: .eslintrc  .gitignore  Makefile  README.md  go.mod  go.sum  newsolution.sh  package.json  run.js  test.sh
2019-js/lib/: graphs.spec.js  intcode.js  thruster.spec.js
cmd/gensolution/: gensolution.go  templates.go
cmd/main/: main.go
go/: .editorconfig  Makefile  README.md  go.mod  go.sum  run.sh
go/common/: types.go
inputs/2021/: 17.txt
inputs/day6/: test
js/: README.md  package-lock.json
js/2019/: .envrc  .eslintrc  README.md  package-lock.json  package.json  run.js
lib/: day1.js  day2.js  day3.js  day4.js  day5.js  day6.js  day7.js  day8.js  day9.js  graphs.js  intcode.js  intcode.spec.js  main.js  thruster.js  thruster.spec.js  util.js  util.spec.js
py/: .editorconfig  .gitignore  README.md  pyproject.toml  run.sh  test.sh
py/adventofcode/year2023/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
py/tests/year2023/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day21.py  test_day22.py  test_day23.py  test_day24.py  test_day25.py
rust/: .editorconfig  Cargo.toml  README.md  run.sh  test.sh
(+354 files in other folders)
